test/functions/jturner/fun_call_mismatch.chpl
var f = proc(i:int) { writeln(i); };

f();
